basic linked list

--- a/DataStructuresApp/DataStructuresApp.csproj
+++ b/DataStructuresApp/DataStructuresApp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="LinkedList\" />
+    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
